fix: turn visible the input and textarea data

--- a/registration-form/styles.css
+++ b/registration-form/styles.css
@@ -41,10 +41,13 @@ select {
   margin-top: 10px;
   min-height: 2em;
 }
+
 input,
 textarea {
-  background-color: #0a0a23;
   border: 1px solid #0a0a23;
+
+  color: #ffffff;
+  background-color: #0a0a23;
 }
 
 .inline {
